--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SpringMVCHibernate">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+    <wb-module deploy-name="NeoPingConsole">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
-        <property name="context-root" value="SpringMVCHibernate"/>
-        <property name="java-output-path" value="/SpringMVCHibernate/build/classes"/>
+        <property name="java-output-path" value="/NeoPingConsole/build/classes"/>
+        <property name="context-root" value="NeoPingConsole"/>
     </wb-module>
 </project-modules>
